Add docker-compose support

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,19 +4,20 @@ ROOT=$(abspath ${CURDIR}/..)
 
 SUBDIR=
 
-DOCKER_CONTAINERS=$(shell ${ROOT}/bin/docker-deps -p ${DOCKER_NS} -f make list .)
-DOCKER_REMOTE_CONTAINERS=$(shell ${ROOT}/bin/docker-deps -e production -p ${DOCKER_NS} -f make list .)
-DOCKER_COMPOSITIONS=$(shell ls ${CURDIR}/src/compose-*.erb | xargs -n 1 basename | sed -e 's;.yml.erb$$;;' -e 's;^compose-;;')
+DOCKER_CONTAINERS=$(shell ${ROOT}/mk/scripts/docker-deps -p ${DOCKER_NS} -f make list .)
+DOCKER_REMOTE_CONTAINERS=$(shell ${ROOT}/mk/scripts/docker-deps -e production -p ${DOCKER_NS} -f make list .)
+DOCKER_COMPOSITIONS=$(shell find ${CURDIR}/src -name 'compose-*.erb' | xargs -r -n 1 basename | sed -e 's;.yml.erb$$;;' -e 's;^compose-;;')
 
 include ${ROOT}/mk/Makefile.vars
 include ${ROOT}/mk/Makefile.docker
+include ${ROOT}/mk/Makefile.exports
 
 -include Makefile.deps
 
-all: docker_build
-
-docker_compile: docker_depend
-docker_build: docker_compile
+all: docker_compile docker_build
 
 list:
 	@echo ${DOCKER_CONTAINERS}
+
+list_remote:
+	@echo ${DOCKER_REMOTE_CONTAINERS}
