Add docker-compose support

--- a/mk/Makefile.cfg
+++ b/mk/Makefile.cfg
@@ -1,3 +1,4 @@
 # Copyright (c) 2017 Trough Creek Holdings, LLC.  All Rights Reserved
 
 DOCKER_NS := runas
+GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
