--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -8,7 +8,9 @@ include ${ROOT}/mk/Makefile.cfg
 .PHONY: all build init clean nuke
 
 ROOT:=$(abspath $(dir $(lastword $(MAKEFILE_LIST)))/..)
+REL_ROOT=$(shell echo $(dir $(lastword $(MAKEFILE_LIST)))/.. | tr -s '/')
 export BUILD_ROOT=${ROOT}
+export BUILD_RELROOT=${REL_ROOT}
 
 AWS_PROFILE?=default
 AWS_CMD := $(if $(AWS_PROFILE), aws --profile ${AWS_PROFILE}, aws)
@@ -25,3 +27,6 @@ endef
 ifdef SUBDIR
 $(foreach t, init all depend clean nuke reset, $(eval $(call RECURSIVE_template,$t)))
 endif
+
+targets:
+	@$(MAKE) -pRrq -f $(firstword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
