--- a/mk/Makefile.docker
+++ b/mk/Makefile.docker
@@ -5,7 +5,9 @@ define DOCKER_BUILD_template
 build/Dockerfile.${1}: src/${1}.dockerb
 	erb package_revision=${REVISION} src/${1}.dockerb > build/Dockerfile.${1}
 
-docker_build_${1}: build/Dockerfile.${1}
+docker_expand_${1}: build/Dockerfile.${1}
+
+docker_build_${1}: docker_expand_${1}
 	(cd ${ROOT} && docker build -f ${CURDIR}/build/Dockerfile.${1} -t ${DOCKER_NS}/${1}:${REVISION} .)
 
 docker_tag_${1}: docker_build_${1}
@@ -23,8 +25,24 @@ ifdef DOCKER_CONTAINERS
 $(foreach t, ${DOCKER_CONTAINERS}, $(eval $(call DOCKER_BUILD_template,$t)))
 endif
 
+define DOCKER_COMPOSE_template
+.PHONY: docker_compose_${1}
+build/compose-${1}.yml: src/compose-${1}.yml.erb
+	erb package_revision=${REVISION} src/compose-${1}.yml.erb > build/compose-${1}.yml
+
+docker_compose_${1}: build/compose-${1}.yml
+endef
+
+ifdef DOCKER_COMPOSITIONS
+$(foreach t, ${DOCKER_COMPOSITIONS}, $(eval $(call DOCKER_COMPOSE_template,$t)))
+endif
+
 docker_depend:
 	(cd ${ROOT} && ${ROOT}/bin/docker-deps -p ${DOCKER_NS} -f make gen docker) > Makefile.deps
+	for t in ${DOCKER_CONTAINERS} ; do echo src/$${t}.dockerb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
+	for t in ${DOCKER_COMPOSITIONS} ; do echo src/compose-$${t}.yml.erb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
+
+docker_compile: $(patsubst %, docker_expand_%, ${DOCKER_CONTAINERS}) $(patsubst %, docker_compose_%, ${DOCKER_COMPOSITIONS})
 
 docker_build: $(patsubst %, docker_build_%, ${DOCKER_CONTAINERS})
 
@@ -32,7 +50,7 @@ docker_tag_latest: $(patsubst %, docker_tag_%, ${DOCKER_CONTAINERS})
 
 docker_clean: $(patsubst %,docker_clean_%, ${DOCKER_CONTAINERS})
 
-docker_nuke: docker_nuke_untagged $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS})
+docker_nuke: docker_cleanup $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS})
 
 docker_nuke_dangling:
 	@docker images -q --filter "dangling=true" | xargs -I{} -r -n 1 bash -c 'echo "Removing {}"; docker rmi {}'
