Beginning of some basic packaging infrastructure

--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -28,5 +28,8 @@ ifdef SUBDIR
 $(foreach t, init all depend clean nuke reset, $(eval $(call RECURSIVE_template,$t)))
 endif
 
+git_no_untracked:
+	@git diff-index --quiet HEAD || (echo "untracked changes" && /bin/false)
+
 targets:
 	@$(MAKE) -pRrq -f $(firstword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
