--- a/mk/Makefile.package
+++ b/mk/Makefile.package
@@ -1,8 +1,8 @@
 # Copyright (c) 2017 Trough Creek Holdings, LLC.  All Rights Reserved
 
+# Clumsy detection and handling of a docker build environment
+# Don't use runas so we can build it without already having it
 package:
-	# Clumsy detection and handling of a docker build environment
-	# Don't use runas so we can build it without already having it
 	if [ "$${DOCKER}" = true ] ; then			\
 		${ROOT}/mk/packaging/docker-setup.sh ;		\
 		su - build -c 'bash -l -c "cd src && $(MAKE) package_guts"' ; \
@@ -10,7 +10,10 @@ package:
 		$(MAKE) package_guts ;				\
 	fi
 
-package_guts: git_no_untracked dpkg_deb_present # build
+package_guts: git_no_untracked dpkg_deb_present package_build
+
+package_build: build
+	${ROOT}/mk/packaging/build_deb_package.sh
 
 dpkg_deb_present:
 	@which dpkg-deb
