--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -16,8 +16,11 @@ AWS_PROFILE?=default
 AWS_CMD := $(if $(AWS_PROFILE), aws --profile ${AWS_PROFILE}, aws)
 GO_VERSION := $(shell ${ROOT}/bin/cfg-version -c ${ROOT}/config/versions.yml golang)
 
-REVISION := $(shell cat ${ROOT}/REVISION)
+REVISION:=$(shell cat ${ROOT}/REVISION)
+
+#export PACKAGE_NAME - see Makefile.cfg
 export PACKAGE_REVISION=${REVISION}
+export PACKAGE_VERSION=$(if ${RELEASE_DATE},"${REVISION}-${RELEASE_DATE}",${REVISION})
 
 define RECURSIVE_template
 ${1}:
@@ -25,7 +28,8 @@ ${1}:
 endef
 
 ifdef SUBDIR
-$(foreach t, init all depend clean nuke reset, $(eval $(call RECURSIVE_template,$t)))
+RECURSIVE_TARGETS ?= init all depend clean nuke
+$(foreach t, ${RECURSIVE_TARGETS}, $(eval $(call RECURSIVE_template,$t)))
 endif
 
 git_no_untracked:
