--- a/mk/Makefile.cfg
+++ b/mk/Makefile.cfg
@@ -1,4 +1,7 @@
 # Copyright (c) 2017 Trough Creek Holdings, LLC.  All Rights Reserved
 
-DOCKER_NS := runas
+PACKAGE_NAME := runas
+export PACKAGE_NAME
+
+DOCKER_NS := ${PACKAGE_NAME}
 GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
