Use git status --porcelain to detect a dirty working tree.

--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -33,7 +33,7 @@ $(foreach t, ${RECURSIVE_TARGETS}, $(eval $(call RECURSIVE_template,$t)))
 endif
 
 git_no_untracked:
-	@git diff-index --quiet HEAD || (echo "untracked changes" && /bin/false)
+	@git status --untracked-files=no --porcelain || (echo "untracked changes" && git status && git diff && git version && /bin/false)
 
 targets:
 	@$(MAKE) -pRrq -f $(firstword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
