--- a/mk/Makefile.docker
+++ b/mk/Makefile.docker
@@ -1,5 +1,9 @@
 # Copyright (c) 2017 Trough Creek Holdings, LLC.  All Rights Reserved
 
+# Make docker_* dependency of non-docker version
+$(foreach _, init check depend clean nuke reset, $(eval $_: docker_$_))
+$(foreach _, init check depend clean nuke reset, $(eval .PHONY: docker_$_))
+
 define DOCKER_BUILD_template
 .PHONY: docker_build_${1}
 build/Dockerfile.${1}: src/${1}.dockerb
@@ -8,17 +12,21 @@ build/Dockerfile.${1}: src/${1}.dockerb
 docker_expand_${1}: build/Dockerfile.${1}
 
 docker_build_${1}: docker_expand_${1}
+ifeq ($(wildcard ${CURDIR}/build/compose-build-${1}.yml),)
 	(cd ${ROOT} && docker build -f ${CURDIR}/build/Dockerfile.${1} -t ${DOCKER_NS}/${1}:${REVISION} .)
+else
+	(cd ${ROOT} && docker-compose -f ${CURDIR}/build/compose-build-${1}.yml build)
+endif
 
 docker_tag_${1}: docker_build_${1}
 	docker tag ${DOCKER_NS}/${1}:${REVISION} ${DOCKER_NS}/${1}:latest
 
 docker_clean_${1}:
-	@docker images -q ${DOCKER_NS}/${1}:${REVISION} | xargs -I{} -r -n 1 bash -c 'echo "Removing {}"; docker rmi {}'
+	@docker images -q --filter "dangling=true" ${DOCKER_NS}/${1}:${REVISION} | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
 
 docker_nuke_${1}:
 	@rm -f build/Dockerfile.${1}
-	@docker images -q ${DOCKER_NS}/${1} | xargs -I{} -r -n 1 bash -c 'echo "Removing {}"; docker rmi {}'
+	@docker images -q --filter "dangling=true" ${DOCKER_NS}/${1} | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
 endef
 
 ifdef DOCKER_CONTAINERS
@@ -40,6 +48,7 @@ endif
 docker_depend:
 	(cd ${ROOT} && ${ROOT}/bin/docker-deps -p ${DOCKER_NS} -f make gen docker) > Makefile.deps
 	for t in ${DOCKER_CONTAINERS} ; do echo src/$${t}.dockerb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
+	for t in ${DOCKER_COMPOSITIONS} ; do echo build/compose-$${t}.yml: src/compose-$${t}.yml.erb >> Makefile.deps ; done
 	for t in ${DOCKER_COMPOSITIONS} ; do echo src/compose-$${t}.yml.erb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
 
 docker_compile: $(patsubst %, docker_expand_%, ${DOCKER_CONTAINERS}) $(patsubst %, docker_compose_%, ${DOCKER_COMPOSITIONS})
@@ -50,14 +59,17 @@ docker_tag_latest: $(patsubst %, docker_tag_%, ${DOCKER_CONTAINERS})
 
 docker_clean: $(patsubst %,docker_clean_%, ${DOCKER_CONTAINERS})
 
-docker_nuke: docker_cleanup $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS})
+docker_nuke: docker_cleanup docker_nuke_volumes $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS})
 
 docker_nuke_dangling:
-	@docker images -q --filter "dangling=true" | xargs -I{} -r -n 1 bash -c 'echo "Removing {}"; docker rmi {}'
+	@docker images -q --filter "dangling=true" | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
 
 docker_nuke_exited:
 	# FUTURE: replace with docker {container,system} prune
 	docker ps -q  --filter "status=exited" | xargs -r -n 1 docker rm
+
+docker_nuke_volumes:
+	@docker volume ls -qf dangling=true | xargs -I{} -r -n 1 bash -c 'echo "Removing volume {}"; docker volume rm {}'
 
 docker_cleanup:
 	${MAKE} docker_nuke_exited
