--- a/mk/Makefile.cfg
+++ b/mk/Makefile.cfg
@@ -1,7 +1,10 @@
-# Copyright (c) 2017 Trough Creek Holdings, LLC.  All Rights Reserved
+# Copyright (c) 2017, 2018 Trough Creek Holdings, LLC.  All Rights Reserved
 
 PACKAGE_NAME := runas
 export PACKAGE_NAME
+
+COMPOSE_USER := api
+export COMPOSE_USER
 
 DOCKER_NS := ${PACKAGE_NAME}
 GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
