Update to latest version of docker-make build system.

--- a/mk/Makefile.cfg
+++ b/mk/Makefile.cfg
@@ -6,6 +6,9 @@ export PACKAGE_NAME
 COMPOSE_USER := api
 export COMPOSE_USER
 
+AWS_REGION := us-east-1
+export AWS_REGION
+
 DOCKER_NS := ${PACKAGE_NAME}
 
 GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
