--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -12,6 +12,9 @@ REL_ROOT=$(shell echo $(dir $(lastword $(MAKEFILE_LIST)))/.. | tr -s '/')
 export BUILD_ROOT=${ROOT}
 export BUILD_RELROOT=${REL_ROOT}
 
+BUILD_DATE:=$(shell TZ=UTC date -Iseconds)
+export BUILD_DATE
+
 AWS_PROFILE?=default
 AWS_CMD := $(if $(AWS_PROFILE), aws --profile ${AWS_PROFILE}, aws)
 GO_VERSION := $(shell ${ROOT}/bin/cfg-version -c ${ROOT}/config/versions.yml golang)
