--- a/docker/Makefile.deps
+++ b/docker/Makefile.deps
@@ -1,3 +1,3 @@
-src/base.dockerb: /home/wkj/src/morphisms/runas/mk/../REVISION
-build/compose-build.yml: src/compose-build.yml.erb
-src/compose-build.yml.erb: /home/wkj/src/morphisms/runas/mk/../REVISION
+src/base.dockerb: ./../REVISION
+build/compose-build.yml: src/compose-build.yml.erb ./../REVISION
+src/compose-build.yml.erb: ./../REVISION
