Update to the latest version of docker-make.

--- a/mk/Makefile.vars
+++ b/mk/Makefile.vars
@@ -8,7 +8,8 @@ include ${ROOT}/mk/Makefile.cfg
 .PHONY: all build init clean nuke
 
 ROOT:=$(abspath $(dir $(lastword $(MAKEFILE_LIST)))/..)
-REL_ROOT=$(shell echo $(dir $(lastword $(MAKEFILE_LIST)))/.. | tr -s '/')
+REL_ROOT=$(shell realpath --relative-to="$(abspath $(lastword ${MAKEFILE_LIST})/..)" ${ROOT})
+REL_CURDIR=$(shell realpath --relative-to="${ROOT}" $(abspath $(lastword ${MAKEFILE_LIST})/..))
 export BUILD_ROOT=${ROOT}
 export BUILD_RELROOT=${REL_ROOT}
 
@@ -20,10 +21,15 @@ AWS_CMD := $(if $(AWS_PROFILE), aws --profile ${AWS_PROFILE}, aws)
 GO_VERSION := $(shell ${ROOT}/bin/cfg-version -c ${ROOT}/config/versions.yml golang)
 
 REVISION:=$(shell cat ${ROOT}/REVISION)
+DOCKERB_REVISION := ${REVISION}
+DOCKERB_PACKAGE_NAME := ${PACKAGE_NAME}
 
 #export PACKAGE_NAME - see Makefile.cfg
 export PACKAGE_REVISION=${REVISION}
 export PACKAGE_VERSION=$(if ${RELEASE_DATE},"${REVISION}-${RELEASE_DATE}",${REVISION})
+
+# This is not the function definition you are looking for...
+reverse = $(if $(1),$(call reverse,$(wordlist 2,$(words $(1)),$(1)))) $(firstword $(1))
 
 define RECURSIVE_template
 ${1}:
@@ -39,4 +45,4 @@ git_no_untracked:
 	@git status --untracked-files=no --porcelain || (echo "untracked changes" && git status && git diff && git version && /bin/false)
 
 targets:
-	@$(MAKE) -pRrq -f $(firstword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
+	@$(MAKE) -pRrq -f $(firstword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^(src|build)/' -e '^$@$$'
