--- a/mk/Makefile.cfg
+++ b/mk/Makefile.cfg
@@ -12,3 +12,5 @@ export AWS_REGION
 DOCKER_NS := ${PACKAGE_NAME}
 
 GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
+
+-include ${ROOT}/mk/Makefile.cfg.local
