--- a/mk/Makefile.docker
+++ b/mk/Makefile.docker
@@ -3,50 +3,59 @@
 # NB: requires "experimental" mode because Docker is dumb as rocks
 ifneq (${DOCKER_SQUASH},)
 DOCKER_SQUASH:=--squash
+export DOCKER_SQUASH
 endif
+
+DOCKERB_FORCE_ON_COMMIT ?=
 
 # Make docker_* dependency of non-docker version
 $(foreach _, init check depend clean nuke reset, $(eval $_: docker_$_))
 $(foreach _, init check depend clean nuke reset, $(eval .PHONY: docker_$_))
 
+DOCKERB_ARGS := $(foreach v, $(filter-out DOCKERB_FORCE_ON_COMMIT, $(filter DOCKERB_%, ${.VARIABLES})), $(patsubst DOCKERB_%,%,$v)=$($(v)))
+
 define DOCKER_BUILD_template
 build/Dockerfile.${1}: src/${1}.dockerb
-	${ROOT}/mk/scripts/dockerb -o build/Dockerfile.${1} src/${1}.dockerb revision=${REVISION} package_name=${PACKAGE_NAME}
+	${ROOT}/mk/scripts/dockerb -o build/Dockerfile.${1} src/${1}.dockerb ${DOCKERB_ARGS}
 
 docker_expand_${1}: build/Dockerfile.${1}
 
 docker_build_${1}: docker_expand_${1}
-	${ROOT}/mk/scripts/docker-build-wrapper ${1}
+ifeq ($(filter ${1},${DOCKERB_FORCE_ON_COMMIT}),)
+	${ROOT}/mk/scripts/docker-build-wrapper ${DOCKER_BUILD_ARGS} ${1}
+else
+	${ROOT}/mk/scripts/docker-build-wrapper --force-on-commit ${DOCKER_BUILD_ARGS} ${1}
+endif
 
 docker_build_force_${1}: docker_expand_${1}
-	${ROOT}/mk/scripts/docker-build-wrapper --force ${1}
+	${ROOT}/mk/scripts/docker-build-wrapper --force ${DOCKER_BUILD_ARGS} ${1}
 
-_docker_rebuild_${1}:
-	rm -f build/.stamp.time.${1}
-
-docker_rebuild_${1}: _docker_rebuild_${1} docker_build_force_${1}
+docker_rebuild_${1}: docker_stamp_nuke_${1} docker_build_force_${1}
 
 docker_clean_${1}:
 	@docker images -q --filter "dangling=true" ${DOCKER_NS}:${1}-${REVISION} | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
 
-docker_nuke_${1}:
-	@rm -f build/.stamp.time.${1} build/.stamp.revision.${1}
+docker_stamp_nuke_${1}:
+	rm -f build/.stamp.*.${1}
+
+docker_nuke_${1}: docker_stamp_nuke_${1}
 	@rm -f build/Dockerfile.${1}
-	@docker images -q --filter "dangling=true" ${DOCKER_NS}/${1} | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
+	@docker images -q "${DOCKER_NS}:${1}-[0-9]*" | xargs -I{} -r -n 1 bash -c 'echo "Removing image {}"; docker rmi {}'
 
 # Currently a dummy target as build tags locally
 docker_tag_${1}:
 	@/bin/true
 
 docker_remote_tag_${1}: docker_tag_${1}
-	docker tag ${DOCKER_NS}:${1}-${REVISION} ${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}:${1}-${REVISION}
+	${ROOT}/mk/scripts/docker-tag-wrapper ${DOCKER_TAG_WRAPPER_ARGS} tag ${DOCKER_REGISTRY} ${DOCKER_REPOSITORY} ${DOCKER_NS} ${1} ${REVISION}
 
 docker_remote_push_${1}: docker_remote_tag_${1}
-	docker push ${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}:${1}-${REVISION}
+	${ROOT}/mk/scripts/docker-tag-wrapper ${DOCKER_TAG_WRAPPER_ARGS} push ${DOCKER_REGISTRY} ${DOCKER_REPOSITORY} ${DOCKER_NS} ${1} ${REVISION}
 endef
 
 ifdef DOCKER_CONTAINERS
 $(foreach t, ${DOCKER_CONTAINERS}, $(eval $(call DOCKER_BUILD_template,$t)))
+docker_rebuild: docker_nuke docker_build
 endif
 
 ifndef DOCKER_REMOTE_CONTAINERS
@@ -56,7 +65,7 @@ endif
 define DOCKER_COMPOSE_template
 .PHONY: docker_compose_${1}
 build/compose-${1}.yml: src/compose-${1}.yml.erb
-	${ROOT}/mk/scripts/dockerb -o build/compose-${1}.yml src/compose-${1}.yml.erb revision=${REVISION} package_name=${PACKAGE_NAME}
+	${ROOT}/mk/scripts/dockerb -o build/compose-${1}.yml src/compose-${1}.yml.erb ${DOCKERB_ARGS}
 
 docker_compose_${1}: build/compose-${1}.yml
 endef
@@ -66,9 +75,9 @@ $(foreach t, ${DOCKER_COMPOSITIONS}, $(eval $(call DOCKER_COMPOSE_template,$t)))
 endif
 
 docker_depend:
-	(cd ${ROOT} && ${ROOT}/mk/scripts/docker-deps -p ${DOCKER_NS} -f make gen docker) > Makefile.deps
+	(cd $(abspath $(dir ${CURDIR})) && ${ROOT}/mk/scripts/docker-deps -p ${DOCKER_NS} -f make gen docker) > Makefile.deps
 	for t in ${DOCKER_CONTAINERS} ; do echo src/$${t}.dockerb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
-	for t in ${DOCKER_COMPOSITIONS} ; do echo build/compose-$${t}.yml: src/compose-$${t}.yml.erb ${REL_ROOT}/REVISION >> Makefile.deps ; done
+	for t in ${DOCKER_COMPOSITIONS} ; do echo build/compose-$${t}.yml: src/compose-$${t}.yml.erb >> Makefile.deps ; done
 	for t in ${DOCKER_COMPOSITIONS} ; do echo src/compose-$${t}.yml.erb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
 
 docker_compile: $(patsubst %, docker_expand_%, ${DOCKER_CONTAINERS}) $(patsubst %, docker_compose_%, ${DOCKER_COMPOSITIONS})
@@ -83,7 +92,7 @@ docker_remote_push: $(patsubst %, docker_remote_push_%, ${DOCKER_REMOTE_CONTAINE
 
 docker_clean: $(patsubst %,docker_clean_%, ${DOCKER_CONTAINERS})
 
-docker_nuke: docker_cleanup $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS})
+docker_nuke: docker_cleanup $(call reverse, $(patsubst %,docker_nuke_%, ${DOCKER_CONTAINERS}))
 	docker volume prune -f
 
 docker_cleanup:
@@ -99,7 +108,13 @@ docker_logout:
 	docker logout ${DOCKER_REGISTRY}
 
 docker_remote_list:
-	docker images https://${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}
+	docker images ${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}
 
 docker_bootstrap_init:
 	${BUILD_ROOT}/mk/scripts/bootstrap-init
+
+docker_images:
+	docker images -f "label=docker_ns=${DOCKER_NS}"
+
+docker_labels:
+	docker inspect --format '{{json .ContainerConfig.Labels}}' ${PACKAGE_NAME}:$(or ${C},${COMPOSE_DEFAULT})-${REVISION}|jq
