Squashed 'mk/' changes from fafb7f6..aadb96e
aadb96e [mk] Don't re-define RECURSIVE_TARGETS.
eff975c [mk] Update copyright header dates.
a24d52c [mk] When rebuilding image force option sent to wrapper should instruct docker to ignore cached layers
b70158b [mk] Removing ECR as prerequisite for tagging commit/date/branch
f0bcd6f [mk] Don't complain about missing golang versionin Makefile.vars.
13fe39b [mk] Always dump a metdata.json into the .dockerwrap directory.
00c954d [mk] Rename build_args to build_arg in scripts/docker-build-wrapper
c14bb6b [mk] Evaluate git commands in the parent repo root by default.
864ba6b [mk] Add a test target for go builds.
bf3c996 [mk] Fix missing pass-through of --build-arg in docker-build-wrapper.
f9403ae [mk] Use hard links in docker-build-wrapper context copy when possible.
ade42fe [mk] Add ability to build wrapper to copy files into known-location in build context.
dbb08a0 [mk] Add a crude ruby re-implementation of realpath to avoid dep on coreutils.
730b2a9 [mk] Add the branch name to a container's docker labels.
4abd359 [mk] Change docker tag schema to make it easier to parse tags.
bf4140a [mk] Make it easy to disable docker remote cache pull when bandwidth limited.
3240fa1 [mk] Don't try to use an undefined variable in docker-tag-wrapper.
675cfd0 [mk] Fix typo in docker-build-wrapper.
1cc46f0 [mk] Use ts command, if available, to add output timestamps.
36249ae [mk] Fix expansion of MAKE in recursive make template.
499e2af [mk] Use an actually docker-compatible syntax.
c56f99a [mk] Add "nodep" pragma to docker-deps script.
d79ec27 [mk] Docker_depend target should only try to calculate deps if there are containers.
7f4d051 [mk] Support separate context and build roots for docker-build-wrapper.
71da906 [mk] Change read_build_path to more accurate read_path_or_empty.
7bc7699 [mk] Refactor docker build wrapper to make it easier to split build root and context.
8ef9a3d [mk] Remove Hashie dependency for the sake of simplicity.
481be2e [

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -21,11 +21,13 @@ func_reverse = $(if $(1),$(call func_reverse,$(wordlist 2,$(words $(1)),$(1)))) 
 RAILS_ENV?=development
 
 ROOT:=$(abspath $(dir $(lastword $(MAKEFILE_LIST)))/..)
-REL_ROOT=$(shell realpath --relative-to="$(abspath $(lastword ${MAKEFILE_LIST})/..)" ${ROOT})
-REL_CURDIR=$(shell realpath --relative-to="${ROOT}" $(abspath $(lastword ${MAKEFILE_LIST})/..))
+REL_ROOT=$(shell ${ROOT}/mk/scripts/realpath --relative-to="$(abspath $(lastword ${MAKEFILE_LIST})/..)" ${ROOT})
+REL_CURDIR=$(shell ${ROOT}/mk/scripts/realpath --relative-to="${ROOT}" $(abspath $(lastword ${MAKEFILE_LIST})/..))
 
 export REL_ROOT
 export REL_CURDIR
+
+export BUILD_REPO_ROOT=$(abspath ${ROOT})
 
 ifneq ($(filter-out undefined, $(foreach v, ${BUILD_SERVICE} ${ROOT_SERVICE}, $(origin v))),)
 export BUILD_ROOT=$(abspath ${ROOT}/${ROOT_SERVICE}/${BUILD_SERVICE})
@@ -33,14 +35,16 @@ else
 export BUILD_ROOT=${ROOT}
 endif
 
-export BUILD_RELROOT=$(shell realpath --relative-to="$(abspath $(lastword ${MAKEFILE_LIST})/..)" ${BUILD_ROOT})
+export BUILD_RELROOT=$(shell ${ROOT}/mk/scripts/realpath --relative-to="$(abspath $(lastword ${MAKEFILE_LIST})/..)" ${BUILD_ROOT})
 
 BUILD_DATE:=$(shell TZ=UTC date -Iseconds)
 export BUILD_DATE
 
 AWS_PROFILE?=default
-AWS_CMD := $(if $(AWS_PROFILE), aws --profile ${AWS_PROFILE}, aws)
-GO_VERSION := $(shell ${ROOT}/mk/scripts/cfg-version -c ${ROOT}/config/versions.yml golang)
+AWS_CMD ?= aws
+AWS_CMD := $(if $(AWS_PROFILE), ${AWS_CMD} --profile ${AWS_PROFILE}, ${AWS_CMD})
+AWS_CMD := $(if $(AWS_REGION), ${AWS_CMD} --region ${AWS_REGION}, ${AWS_CMD})
+GO_VERSION := $(shell ${ROOT}/mk/scripts/cfg-version -q -c ${ROOT}/config/versions.yml golang)
 
 REVISION:=$(shell cat ${ROOT}/REVISION)
 DOCKERB_REVISION := ${REVISION}
@@ -52,11 +56,14 @@ export PACKAGE_VERSION=$(if ${RELEASE_DATE},"${REVISION}-${RELEASE_DATE}",${REVI
 
 define RECURSIVE_template
 ${1}:
-	for d in ${SUBDIR} ; do ${MAKE} -C $$$$d $${@} ; done
+	for d in ${SUBDIR} ; do $${MAKE} -C $$$$d $${@} ; done
 endef
 
 ifdef SUBDIR
-RECURSIVE_TARGETS ?= init all depend clean nuke
+RECURSIVE_TARGETS_DEFAULT ?= init all depend clean nuke
+ifndef RECURSIVE_TARGETS
+RECURSIVE_TARGETS := ${RECURSIVE_TARGETS_DEFAULT}
+endif
 $(foreach t, ${RECURSIVE_TARGETS}, $(eval $(call RECURSIVE_template,$t)))
 endif
 
