--- a/Makefile.docker
+++ b/Makefile.docker
@@ -14,7 +14,7 @@ $(foreach _, init check depend clean nuke reset, $(eval .PHONY: docker_$_))
 
 DOCKERB_ARGS := $(foreach v, $(filter-out DOCKERB_FORCE_ON_COMMIT, $(filter DOCKERB_%, ${.VARIABLES})), $(patsubst DOCKERB_%,%,$v)=$($(v)))
 
-DOCKER_TAG_WRAPPER_SYSTEM_ARGS := $(if ${DOCKER_AWS_PROFILE}, --aws-profile ${DOCKER_AWS_PROFILE},) $(if ${DOCKER_AWS_REGISTRY_IDS}, --aws-registry-id ${DOCKER_AWS_REGISTRY_IDS})
+DOCKER_TAG_WRAPPER_SYSTEM_ARGS := $(if ${DOCKER_AWS_REGION}, --aws-region ${DOCKER_AWS_REGION},) $(if ${DOCKER_AWS_PROFILE}, --aws-profile ${DOCKER_AWS_PROFILE},) $(if ${DOCKER_AWS_REGISTRY_IDS}, --aws-registry-id ${DOCKER_AWS_REGISTRY_IDS})
 
 define DOCKER_BUILD_template
 build/Dockerfile.${1}: src/${1}.dockerb
@@ -56,6 +56,15 @@ docker_remote_push_${1}: docker_remote_tag_${1}
 
 docker_remote_pull_${1}:
 	${ROOT}/mk/scripts/docker-tag-wrapper ${DOCKER_TAG_WRAPPER_SYSTEM_ARGS} ${DOCKER_TAG_WRAPPER_ARGS} pull ${DOCKER_REGISTRY} ${DOCKER_REPOSITORY} ${DOCKER_NS} ${1} ${REVISION}
+
+ifndef DOCKER_REMOTE_CACHE_DISABLE
+# Pull but allow failures (we're just warming the local cache)
+docker_remote_cache_${1}:
+	${ROOT}/mk/scripts/docker-tag-wrapper --force ${DOCKER_TAG_WRAPPER_SYSTEM_ARGS} ${DOCKER_TAG_WRAPPER_ARGS} pull ${DOCKER_REGISTRY} ${DOCKER_REPOSITORY} ${DOCKER_NS} ${1} ${REVISION}
+else
+docker_remote_cache_${1}:
+	@/bin/true
+endif
 endef
 
 ifdef DOCKER_CONTAINERS
@@ -87,11 +96,15 @@ ifdef DOCKER_COMPOSITIONS
 $(foreach t, ${DOCKER_COMPOSITIONS}, $(eval $(call DOCKER_COMPOSE_template,$t)))
 endif
 
+ifdef DOCKER_CONTAINERS
 docker_depend:
 	(cd $(abspath $(dir ${CURDIR})) && ${ROOT}/mk/scripts/docker-deps -p ${DOCKER_NS} -f make gen docker) > Makefile.deps
 	for t in ${DOCKER_CONTAINERS} ; do echo src/$${t}.dockerb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
 	for t in ${DOCKER_COMPOSITIONS} ; do echo build/compose-$${t}.yml: src/compose-$${t}.yml.erb >> Makefile.deps ; done
 	for t in ${DOCKER_COMPOSITIONS} ; do echo src/compose-$${t}.yml.erb: ${REL_ROOT}/REVISION >> Makefile.deps ; done
+else
+docker_depend:
+endif
 
 docker_compile: $(patsubst %, docker_expand_%, ${DOCKER_CONTAINERS}) $(patsubst %, docker_compose_%, ${DOCKER_COMPOSITIONS})
 
@@ -104,6 +117,8 @@ docker_remote_tag: $(patsubst %, docker_remote_tag_%, ${DOCKER_REMOTE_CONTAINERS
 docker_remote_push: $(patsubst %, docker_remote_push_%, ${DOCKER_REMOTE_CONTAINERS})
 
 docker_remote_pull: $(patsubst %, docker_remote_pull_%, ${DOCKER_REMOTE_CONTAINERS})
+
+docker_remote_cache: $(patsubst %, docker_remote_cache_%, ${DOCKER_REMOTE_CONTAINERS})
 
 docker_clean: $(patsubst %,docker_clean_%, ${DOCKER_CONTAINERS})
 
@@ -133,3 +148,7 @@ docker_images:
 
 docker_labels:
 	docker inspect --format '{{json .ContainerConfig.Labels}}' ${PACKAGE_NAME}:$(or ${C},${COMPOSE_DEFAULT})-${REVISION}|jq
+
+docker_show_deps:
+	@echo -n "INPUT\t\t->\tOUTPUT\n"
+	@grep '^FROM' src/*.dockerb  | sed -e 's;^src/;;' -e 's;-[<].*;;'  -e 's;[.]dockerb:FROM;;' -e 's;tddium_site:;;' | awk '{ printf("%s\t->\t%s\n", $$2, $$1); }' | sort -r
