Adjust GO_FLAGS for go 1.12 compilation so we still get a static binary.

--- a/config/Makefile.cfg
+++ b/config/Makefile.cfg
@@ -1,4 +1,4 @@
-# Copyright (c) 2017, 2018 Trough Creek Holdings, LLC.  All Rights Reserved
+# Copyright (c) 2017-2019 Trough Creek Holdings, LLC.  All Rights Reserved.
 
 PACKAGE_NAME := runas
 export PACKAGE_NAME
@@ -11,6 +11,6 @@ export AWS_REGION
 
 DOCKER_NS := ${PACKAGE_NAME}
 
-GO_FLAGS := -ldflags "-linkmode external -extldflags -static"
+GO_FLAGS := -tags 'netgo osusergo netgo cgo'
 
 -include ${ROOT}/mk/Makefile.cfg.local
