--- a/Makefile.vars
+++ b/Makefile.vars
@@ -1,4 +1,4 @@
-# Copyright (c) 2017, 2018 Trough Creek Holdings, LLC.  All Rights Reserved
+# Copyright (c) 2017, 2018 Trough Creek Holdings, LLC.  All Rights Reserved.
 
 # For use when building multiple services in a monolithic repository
 ifdef BUILD_SERVICE
@@ -63,6 +63,8 @@ ifdef SUBDIR
 RECURSIVE_TARGETS_DEFAULT ?= init all depend clean nuke
 ifndef RECURSIVE_TARGETS
 RECURSIVE_TARGETS := ${RECURSIVE_TARGETS_DEFAULT}
+else
+RECURSIVE_TARGETS := ${RECURSIVE_TARGETS_DEFAULT} ${RECURSIVE_TARGETS}
 endif
 $(foreach t, ${RECURSIVE_TARGETS}, $(eval $(call RECURSIVE_template,$t)))
 endif
