--- a/config/Makefile.cfg
+++ b/config/Makefile.cfg
@@ -1,4 +1,4 @@
-# Copyright (c) 2017-2019 Trough Creek Holdings, LLC.  All Rights Reserved.
+# Copyright (c) 2017-2021 Trough Creek Holdings, LLC.  All Rights Reserved.
 
 PACKAGE_NAME := runas
 export PACKAGE_NAME
@@ -12,5 +12,8 @@ export AWS_REGION
 DOCKER_NS := ${PACKAGE_NAME}
 
 GO_FLAGS := -tags 'netgo osusergo netgo cgo'
+
+CGO_ENABLED ?= 1
+export CGO_ENABLED
 
 -include ${ROOT}/mk/Makefile.cfg.local
