--- a/config/Makefile.cfg
+++ b/config/Makefile.cfg
@@ -11,7 +11,7 @@ export AWS_REGION
 
 DOCKER_NS := ${PACKAGE_NAME}
 
-GO_FLAGS := -tags 'netgo osusergo netgo cgo'
+GO_FLAGS := -tags 'netgo netgo cgo'
 
 CGO_ENABLED ?= 1
 export CGO_ENABLED
