Squashed 'mk/' changes from a6d2b52..985c076
985c076 [mk] Dedup RECURSIVE_TARGETS variable in Makefile.vars.
dd79742 [mk] Improved support for pull remote images into local build.
d14fefa [mk] Use more aggressive compression when bundling Lambdas.
d96b010 [mk] Allow overriding the name of an AWS Lambda function implementation.
242b332 [mk] Only set VENV_ROOT if it hasn't already been defined.
ce7f2ac [mk] Temporary hack to make progress with Lambda; really needs re-write.
e0abdc0 [mk] Add Python pip management targets.
f8e5b52 [mk] Add default values for PIP and PYTHON make variables.

git-subtree-dir: mk
git-subtree-split: 985c0761a74ac28df271780f9453207066b3b63c

--- a/Makefile.lambda
+++ b/Makefile.lambda
@@ -4,23 +4,23 @@
 $(foreach _, init check clean nuke reset, $(eval $_: lambda_$_))
 $(foreach _, init check clean nuke reset, $(eval .PHONY: lambda_$_))
 
+LAMBDA_SRC_FILES ?= lambda_function.py
+
 lambda_build: venv_init
 	make ${LAMBDA}.zip
 
-${LAMBDA}.zip: lambda_function.py ${LAMBDA_ZIP_FILES}
-	. ${VENV_ROOT}/bin/activate ;					\
-									\
+${LAMBDA}.zip: ${LAMBDA_SRC_FILES} ${LAMBDA_ZIP_FILES}
 	rm -f ${LAMBDA}.zip ;						\
-	zip -r ${LAMBDA}.zip *.py ;					\
+	zip -r9 ${LAMBDA}.zip ${LAMBDA_SRC_FILES} -x **/__pycache__/*; \
 									\
 	zipfile=${CURDIR}/${LAMBDA}.zip ;				\
 	for f in ${LAMBDA_ZIP_FILES} ; do				\
 		(cd `dirname $$f` && zip -r $$zipfile `basename $$f`) ;	\
 	done ;								\
 									\
-	for d in local/lib lib/python2.7/site-packages ; do		\
-		if [ -d ${VENV_ROOT}/$$d ] ; then			\
-			(cd ${VENV_ROOT}/$$d && zip -r $$zipfile .) ;	\
+	for d in `find ${VENV_ROOT} -type d -a -name site-packages`; do	\
+		if [ -d $$d ] ; then					\
+			(cd $$d && zip -r9 $$zipfile .) ;		\
 		fi							\
 	done
 
