--- a/Makefile.vars
+++ b/Makefile.vars
@@ -1,4 +1,4 @@
-# Copyright (c) 2017, 2018 Trough Creek Holdings, LLC.  All Rights Reserved.
+# Copyright (c) 2017-2021 Trough Creek Holdings, LLC.  All Rights Reserved.
 
 # For use when building multiple services in a monolithic repository
 ifdef BUILD_SERVICE
@@ -40,6 +40,9 @@ export BUILD_RELROOT=$(shell ${ROOT}/mk/scripts/realpath --relative-to="$(abspat
 BUILD_DATE:=$(shell TZ=UTC date -Iseconds)
 export BUILD_DATE
 
+PYTHON ?= python
+PYTHON_PIP ?= pip
+
 AWS_PROFILE?=default
 AWS_CMD ?= aws
 AWS_CMD := $(if $(AWS_PROFILE), ${AWS_CMD} --profile ${AWS_PROFILE}, ${AWS_CMD})
@@ -66,6 +69,9 @@ RECURSIVE_TARGETS := ${RECURSIVE_TARGETS_DEFAULT}
 else
 RECURSIVE_TARGETS := ${RECURSIVE_TARGETS_DEFAULT} ${RECURSIVE_TARGETS}
 endif
+
+RECURSIVE_TARGETS := $(shell echo ${RECURSIVE_TARGETS} | tr ' ' '\n' | sort -u)
+
 $(foreach t, ${RECURSIVE_TARGETS}, $(eval $(call RECURSIVE_template,$t)))
 endif
 
